--- a/MetaCrawl_MOODs.ipynb
+++ b/MetaCrawl_MOODs.ipynb
@@ -6,7 +6,8 @@
       "name": "MetaCrawl-MOODs.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "[View in Colaboratory](https://colab.research.google.com/github/massivetexts/MOODs/blob/master/MetaCrawl_MOODs.ipynb)"
+      ]
+    },
     {
       "metadata": {
         "id": "rR4p5MbHO5pC",
