Done scraping code

--- a/TextDownloader.ipynb
+++ b/TextDownloader.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "[View in Colaboratory](https://colab.research.google.com/github/massivetexts/MOODs/blob/master/MetaCrawl_MOODs.ipynb)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -39,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -53,64 +43,32 @@
     {
      "data": {
       "text/plain": [
-       "array(['https://www.congress.gov/bill/115th-congress/house-bill/4840',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/4685',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/4574',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/4463',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/4406',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/4042',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/3638',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/3243',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/3031',\n",
-       "       'https://www.congress.gov/bill/115th-congress/house-bill/2873'],\n",
-       "      dtype=object)"
+       "(array(['https://www.congress.gov/bill/115th-congress/house-bill/3823',\n",
+       "        'https://www.congress.gov/bill/115th-congress/house-bill/88',\n",
+       "        'https://www.congress.gov/bill/115th-congress/house-bill/1',\n",
+       "        'https://www.congress.gov/bill/114th-congress/house-bill/5946',\n",
+       "        'https://www.congress.gov/bill/114th-congress/house-bill/3209',\n",
+       "        'https://www.congress.gov/bill/114th-congress/house-bill/1527',\n",
+       "        'https://www.congress.gov/bill/114th-congress/house-bill/606',\n",
+       "        'https://www.congress.gov/bill/113th-congress/house-bill/5771',\n",
+       "        'https://www.congress.gov/bill/113th-congress/house-bill/3771',\n",
+       "        'https://www.congress.gov/bill/113th-congress/house-bill/3458'],\n",
+       "       dtype=object), (9223, 16))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('./bill-meta.csv')\n",
-    "df.URL.values[:10]"
+    "df.URL.values[:10], df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-6e910b77475d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_url\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "for i, row in df.iterrows():\n",
-    "    clean_legnum = row[\"Legislation Number\"].replace(' ', '_').replace('.','-')\n",
-    "    clean_congress = row['Congress'][:3] \n",
-    "    filename = \"bills/%s_%s.txt\" % (clean_congress, clean_legnum)\n",
-    "    \n",
-    "    text_url = row['URL'] + '/text?format=txt'\n",
-    "    text = get_text(text_url)\n",
-    "\n",
-    "    time.sleep(3)\n",
-    "    \n",
-    "    with open(filename, mode='w') as f:\n",
-    "        f.write(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +80,36 @@
     "    soup = BeautifulSoup(page, 'html.parser')\n",
     "    rawtext = soup.find('pre').text\n",
     "    return rawtext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resume_at = 320\n",
+    "for i, row in df[resume_at:].iterrows():\n",
+    "    clean_legnum = row[\"Legislation Number\"].replace(' ', '_').replace('.','-')\n",
+    "    clean_congress = row['Congress'][:3] \n",
+    "    filename = \"bills/%s_%s.txt\" % (clean_congress, clean_legnum)\n",
+    "    \n",
+    "    if i % 10 == 0:\n",
+    "        with open('progress.txt', mode='a') as f:\n",
+    "            f.write('%d\\t%s\\t%s\\n' % (i, clean_congress, clean_legnum))\n",
+    "\n",
+    "    try:\n",
+    "        text_url = row['URL'] + '/text?format=txt'\n",
+    "        text = get_text(text_url)\n",
+    "\n",
+    "        with open(filename, mode='w') as f:\n",
+    "            f.write(text)\n",
+    "            \n",
+    "    except:\n",
+    "        with open('errors.txt', mode='a') as f:\n",
+    "            f.write('%d\\t%s\\t%s\\n' % (i, clean_congress, clean_legnum))\n",
+    "            \n",
+    "    time.sleep(2)"
    ]
   },
   {
@@ -150,17 +138,6 @@
     "url = \"https://www.congress.gov/bill/106th-congress/house-bill/449/text\"\n",
     "get_text(url)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "ZlCUwCF7A9tT"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -326,6 +303,42 @@
     "#can do soup.find('pre').text as well but it gathers everything in one horizontal line!\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking Errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100    531\n",
+       "96t    515\n",
+       "98t    477\n",
+       "95t    461\n",
+       "94t    456\n",
+       "93r    453\n",
+       "99t    418\n",
+       "97t    379\n",
+       "101      1\n",
+       "Name: 100, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('errors.txt', sep='\\t')['100'].value_counts()"
+   ]
   }
  ],
  "metadata": {
@@ -351,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
