Organizing metadata related code

--- a/MetaCrawl_MOODs.ipynb
+++ b/MetaCrawl_MOODs.ipynb
@@ -336,71 +336,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning and parsing metadata"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "nJfyeW4UWIQD",
-    "outputId": "269a3424-3127-4b8c-8934-d9c418cc1f4e"
-   },
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "alldf = pd.read_csv('bill-meta.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9223\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "Government Operations and Politics             1474\n",
-       "Public Lands and Natural Resources             1319\n",
-       "Armed Forces and National Security              689\n",
-       "Economics and Public Finance                    493\n",
-       "Transportation and Public Works                 476\n",
-       "Health                                          395\n",
-       "International Affairs                           390\n",
-       "Native Americans                                389\n",
-       "Crime and Law Enforcement                       333\n",
-       "Commerce                                        274\n",
-       "Agriculture and Food                            266\n",
-       "Finance and Financial Sector                    253\n",
-       "Energy                                          238\n",
-       "Water Resources Development                     210\n",
-       "Environmental Protection                        191\n",
-       "Foreign Trade and International Finance         191\n",
-       "Science, Technology, Communications             186\n",
-       "Law                                             181\n",
-       "Education                                       181\n",
-       "Taxation                                        172\n",
-       "Labor and Employment                            125\n",
-       "Emergency Management                            116\n",
-       "Immigration                                     115\n",
-       "Social Welfare                                  110\n",
-       "Congress                                        105\n",
-       "Arts, Culture, Religion                          90\n",
-       "Housing and Community Development                77\n",
-       "Animals                                          67\n",
-       "Civil Rights and Liberties, Minority Issues      50\n",
-       "Families                                         43\n",
-       "Sports and Recreation                            21\n",
-       "Social Sciences and History                       3\n",
-       "Name: Subject, dtype: int64"
+       "Index(['legislation_number', 'url', 'congress', 'amends_bill', 'title',\n",
+       "       'sponsor', 'date_of_introduction', 'date_offered', 'date_submitted',\n",
+       "       'date_proposed', 'number_of_cosponsors', 'committees',\n",
+       "       'latest_action_date', 'latest_action', 'subject', 'sponsor_party',\n",
+       "       'id'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>legislation_number</th>\n",
+       "      <th>url</th>\n",
+       "      <th>congress</th>\n",
+       "      <th>amends_bill</th>\n",
+       "      <th>title</th>\n",
+       "      <th>sponsor</th>\n",
+       "      <th>date_of_introduction</th>\n",
+       "      <th>date_offered</th>\n",
+       "      <th>date_submitted</th>\n",
+       "      <th>date_proposed</th>\n",
+       "      <th>number_of_cosponsors</th>\n",
+       "      <th>committees</th>\n",
+       "      <th>latest_action_date</th>\n",
+       "      <th>latest_action</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>sponsor_party</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>H.R. 3823</td>\n",
+       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>115th Congress (2017-2018)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Disaster Tax Relief and Airport and Airway Ext...</td>\n",
+       "      <td>Rep. Brady, Kevin [R-TX-8]</td>\n",
+       "      <td>09/25/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>House - Ways and Means, Transportation and Inf...</td>\n",
+       "      <td>09/29/2017</td>\n",
+       "      <td>Became Public Law No: 115-63.</td>\n",
+       "      <td>Taxation</td>\n",
+       "      <td>R</td>\n",
+       "      <td>115 H.R. 3823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>H.R. 88</td>\n",
+       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>115th Congress (2017-2018)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Shiloh National Military Park Boundary Adjustm...</td>\n",
+       "      <td>Rep. Blackburn, Marsha [R-TN-7]</td>\n",
+       "      <td>01/03/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>House - Natural Resources | Senate - Energy an...</td>\n",
+       "      <td>12/21/2018</td>\n",
+       "      <td>Message on House action received in Senate and...</td>\n",
+       "      <td>Taxation</td>\n",
+       "      <td>R</td>\n",
+       "      <td>115 H.R. 88</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  legislation_number                                                url  \\\n",
+       "0          H.R. 3823  https://www.congress.gov/bill/115th-congress/h...   \n",
+       "1            H.R. 88  https://www.congress.gov/bill/115th-congress/h...   \n",
+       "\n",
+       "                     congress  amends_bill  \\\n",
+       "0  115th Congress (2017-2018)          NaN   \n",
+       "1  115th Congress (2017-2018)          NaN   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0  Disaster Tax Relief and Airport and Airway Ext...   \n",
+       "1  Shiloh National Military Park Boundary Adjustm...   \n",
+       "\n",
+       "                           sponsor date_of_introduction  date_offered  \\\n",
+       "0       Rep. Brady, Kevin [R-TX-8]           09/25/2017           NaN   \n",
+       "1  Rep. Blackburn, Marsha [R-TN-7]           01/03/2017           NaN   \n",
+       "\n",
+       "   date_submitted  date_proposed  number_of_cosponsors  \\\n",
+       "0             NaN            NaN                     2   \n",
+       "1             NaN            NaN                     0   \n",
+       "\n",
+       "                                          committees latest_action_date  \\\n",
+       "0  House - Ways and Means, Transportation and Inf...         09/29/2017   \n",
+       "1  House - Natural Resources | Senate - Energy an...         12/21/2018   \n",
+       "\n",
+       "                                       latest_action   subject sponsor_party  \\\n",
+       "0                      Became Public Law No: 115-63.  Taxation             R   \n",
+       "1  Message on House action received in Senate and...  Taxation             R   \n",
+       "\n",
+       "              id  \n",
+       "0  115 H.R. 3823  \n",
+       "1    115 H.R. 88  "
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(alldf))\n",
-    "alldf.Subject.value_counts()"
+    "# Add metadata\n",
+    "alldf.columns = alldf.columns.str.lower().str.replace(' ', '_')\n",
+    "alldf['sponsor_party'] = alldf.sponsor.str.extract('\\[(\\w)-')[0]\n",
+    "alldf['id'] = alldf.congress.apply(lambda x: x[:3]) + ' ' + alldf.legislation_number\n",
+    "alldf.head(2)"
    ]
   },
   {
@@ -415,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -423,8 +532,15 @@
    },
    "outputs": [],
    "source": [
-    "alldf.to_csv('bill-meta.csv')"
+    "alldf.to_csv('bill-meta.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
