Noun-only pre-processing

--- a/billPreprocess.ipynb
+++ b/billPreprocess.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,18 @@
     "import moods\n",
     "import gzip\n",
     "import random\n",
+    "import pandas as pd\n",
     "billpaths = glob.glob('/data/bills/txt/*')\n",
     "random.shuffle(billpaths)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write cleaned sections to file\n",
+    "\n",
+    "Parse bills, stoplist, and write whitespace-joined versions of the text to file."
    ]
   },
   {
@@ -39,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with gzip.open('data/cleaned_by_para.gz', 'wb') as f, gzip.open('data/nouns_by_para.gz', 'wb') as f2:\n",
+    "with gzip.open('/data/bills/cleaned/by_para.gz', 'wb') as f, gzip.open('/data/bills/cleaned/nouns_by_para.gz', 'wb') as f2:\n",
     "    for path in billpaths:\n",
     "        b = moods.Bill(path)\n",
     "        for i, line in enumerate(b.lines(nlp_doc=True)):\n",
@@ -47,6 +57,7 @@
     "                out = \"%s_%d\\t%s\\n\" %(b.name, i, \" \".join(l))\n",
     "                f.write(out.encode('utf-8'))\n",
     "                \n",
+    "                # WRITE NOUN-ONLY VERSION\n",
     "                l2 = moods.clean_words(line, pos=['NOUN', 'PROPN'])\n",
     "                out2 = \"%s_%d\\t%s\\n\" %(b.name, i, \" \".join(l2))\n",
     "                f2.write(out2.encode('utf-8'))"
@@ -66,7 +77,7 @@
     }
    ],
    "source": [
-    "with gzip.open('cleaned_by_para.gz', 'rb') as f:\n",
+    "with gzip.open('/data/bills/cleaned/cleaned_by_para.gz', 'rb') as f:\n",
     "    for f in f.readlines():\n",
     "        print(f)\n",
     "        break"
@@ -191,27 +202,27 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv('data/cleaned_by_para.gz', sep='\\t', names=['name', 'txt'])\n",
+    "df = pd.read_csv('/data/bills/cleaned/by_para.gz', sep='\\t', names=['name', 'txt'])\n",
     "df[['congress', 'sponsor', 'billno', 'part']] = df.name.str.split('_', expand=True)\n",
     "df['title'] = df.congress + '_' + df.sponsor + '_' + df.billno\n",
     "for n in ['title', 'congress', 'sponsor', 'part']:\n",
     "    tmp = df.groupby(n).apply(lambda x: \" \".join(x.txt.fillna(''))).reset_index()\n",
-    "    tmp.to_csv('cleaned_by_%s.gz' % n, compression='gzip', sep='\\t', index=False, header=False)"
+    "    tmp.to_csv('/data/bills/cleaned/by_%s.gz' % n, compression='gzip', sep='\\t', index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/nouns_by_para.gz', sep='\\t', names=['name', 'txt'])\n",
+    "# Save noun-only version\n",
+    "f = pd.read_csv('/data/bills/cleaned/nouns_by_para.gz', sep='\\t', names=['name', 'txt'])\n",
     "df[['congress', 'sponsor', 'billno', 'part']] = df.name.str.split('_', expand=True)\n",
     "df['title'] = df.congress + '_' + df.sponsor + '_' + df.billno\n",
     "for n in ['title', 'congress', 'sponsor', 'part']:\n",
     "    tmp = df.groupby(n).apply(lambda x: \" \".join(x.txt.fillna(''))).reset_index()\n",
-    "    tmp.to_csv('nouns_by_%s.gz' % n, compression='gzip', sep='\\t', index=False, header=False)"
+    "    tmp.to_csv('/data/bills/cleaned/nouns_by_%s.gz' % n, compression='gzip', sep='\\t', index=False, header=False)"
    ]
   }
  ],
